Use a `deb` as the packaging format